components/platform/kafka/overlays/dev/netpol-kafka.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: zylos-kafka-netpol
  namespace: zylos-data-kafka
spec:
  podSelector:
    matchLabels:
      strimzi.io/cluster: zylos-kafka
  policyTypes:
    - Ingress
  ingress:
    # ALLOW TENANT MICROSERVICES
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: zylos-services
      ports:
        - protocol: TCP
          port: 9092   # Plaintext Listener
        - protocol: TCP
          port: 9093   # TLS Listener
        - protocol: TCP
          port: 15008  # Istio Ambient Mesh HBONE

    # ALLOW OBSERVABILITY STACK
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
      ports:
        - protocol: TCP
          port: 9404
        - protocol: TCP
          port: 15008

    # ALLOW INTERNAL KAFKA ECOSYSTEM
    - from:
        - podSelector:
            matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values:
                  - schema-registry
                  - zylos-kafka-connect

      ports:
        - protocol: TCP
          port: 9092
        - protocol: TCP
          port: 9093
        - protocol: TCP
          port: 15008
